@@ -1,21 +1,10 @@
-import org.gradle.internal.jvm.Jvm
-
 plugins {
     id 'io.micronaut.build.internal.micrometer-module'
 }
-
 dependencies {
-    api libs.micronaut.aop
+    api mn.micronaut.aop
+    compileOnly mn.micronaut.core.processor
 
-    if (!JavaVersion.current().isJava9Compatible()) {
-        testImplementation files(Jvm.current().toolsJar)
-    }
-    testImplementation libs.micronaut.inject.java.test
-    testImplementation libs.micronaut.inject.groovy.test
-}
-
-tasks.withType(Test).configureEach {
-    if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_15)) {
-        jvmArgs '--enable-preview'
-    }
+    testImplementation mn.micronaut.inject.java.test
+    testImplementation mn.micronaut.inject.groovy.test
 }
